--- a/w3Template.html
+++ b/w3Template.html
@@ -53,8 +53,8 @@
     <p>The Chimerical Cafe was founded in 2008 by Mr. Mallik, who wanted a place where everyone could find something to eat.</p>
     <p>We serve soups, salads, and sandwiches for everyone, no matter how fantastical they are.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
-      <p>Chef, Coffeeist and Owner: Liam Brown</p>
+      <p><i>"It's magical!"</i></p>
+      <p>Anonymous Customer</p>
     </div>
     <img src="/w3images/coffeeshop.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
