--- a/w3Template.html
+++ b/w3Template.html
@@ -56,9 +56,9 @@
       <p><i>"It's magical!"</i></p>
       <p>Anonymous Customer</p>
     </div>
-    <img src="/w3images/coffeeshop.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="ButterflyBlue.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
-    <p><strong>Address:</strong> 15 Adr street, 5015, NY</p>
+    <p><strong>Picture:</strong> plancas67 BY-ND Creative Commons</p>
   </div>
 </div>
 
