--- a/w3Template.html
+++ b/w3Template.html
@@ -110,7 +110,8 @@
       <h5>Nessie's Soda Selection</h5>
       <p class="w3-text-grey">Coke, Sprite, Fanta, etc. 2.50</p>
     </div>  
-    <img src="/w3images/coffeehouse2.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
+    <img src="Ocean.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
+    <p><strong>Picture:</strong>  @netweb (Stephen Edgar) BY-SA Creative Commons</p>
   </div>
 </div>
 
